// Vitest Snapshot v1

exports[`Breadcrumb > Breadcrumb baseVue demo works fine 1`] = `
<t-breadcrumb
  maxitemwidth="150"
>
  <t-breadcrumbitem>
    页面1
  </t-breadcrumbitem>
  <t-breadcrumbitem>
    页面2面包屑文案超长时悬浮显示文案全部信息
  </t-breadcrumbitem>
  <t-breadcrumbitem
    maxwidth="160"
  >
    面包屑中文案过长时可缩略显示，鼠标hover时显示全部
  </t-breadcrumbitem>
</t-breadcrumb>
`;

exports[`Breadcrumb > Breadcrumb customVue demo works fine 1`] = `<t-breadcrumb />`;

exports[`Breadcrumb > Breadcrumb dropdownVue demo works fine 1`] = `
<t-breadcrumb
  separator="function () { return '/'; }"
>
  <t-breadcrumbitem>
    页面1
  </t-breadcrumbitem>
  <t-breadcrumbitem>
    页面2 
    <svg
      class="t-icon t-icon-chevron-down"
    >
      <use
        href="#t-icon-chevron-down"
      />
    </svg>
  </t-breadcrumbitem>
  <t-breadcrumbitem>
    页面3
  </t-breadcrumbitem>
</t-breadcrumb>
`;

exports[`Breadcrumb > Breadcrumb hrefVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-breadcrumb>
    <t-breadcrumbitem
      to="[object Object]"
    >
      首页
    </t-breadcrumbitem>
    <t-breadcrumbitem
      replace="true"
      to="/vue/components/menu"
    >
      页面1(覆盖路由)
    </t-breadcrumbitem>
    <t-breadcrumbitem
      href="http://tdesign.tencent.com/"
      target="_blank"
    >
      页面2
    </t-breadcrumbitem>
    <t-breadcrumbitem
      disabled="true"
      href="http://tdesign.tencent.com/vue/components/button"
    >
      页面3(disabled)
    </t-breadcrumbitem>
    <t-breadcrumbitem>
      页面4自定义点击
    </t-breadcrumbitem>
  </t-breadcrumb>
  <div
    style="margin-top: 20px;"
  >
    点击计数器：0
  </div>
</t-space>
`;

exports[`Breadcrumb > Breadcrumb iconVue demo works fine 1`] = `
<t-breadcrumb>
  <t-breadcrumbitem>
    <svg
      class="t-icon t-icon-books"
    >
      <use
        href="#t-icon-books"
      />
    </svg>
    页面1
  </t-breadcrumbitem>
  <t-breadcrumbitem>
    <svg
      class="t-icon t-icon-books"
    >
      <use
        href="#t-icon-books"
      />
    </svg>
    页面2
  </t-breadcrumbitem>
  <t-breadcrumbitem>
    <svg
      class="t-icon t-icon-books"
    >
      <use
        href="#t-icon-books"
      />
    </svg>
    页面3
  </t-breadcrumbitem>
</t-breadcrumb>
`;

exports[`Breadcrumb > Breadcrumb optionsVue demo works fine 1`] = `
<t-breadcrumb
  options="[object Object],[object Object],[object Object]"
/>
`;

exports[`Breadcrumb > Breadcrumb toVue demo works fine 1`] = `
<t-breadcrumb>
  <t-breadcrumbitem
    to="[object Object]"
  >
    首页
  </t-breadcrumbitem>
  <t-breadcrumbitem>
    页面1
  </t-breadcrumbitem>
</t-breadcrumb>
`;
